Fix border radius and add padding so code visible with copy button

--- a/themes/maik-blog/assets/scss/_main.scss
+++ b/themes/maik-blog/assets/scss/_main.scss
@@ -575,20 +575,18 @@ table {
 
 .highlight {
     position: relative;
-
-    &:has(table) {
-        margin: 0.95em 0;
-        border-radius: 8px;
-        overflow: hidden;
-    }
+    border-radius: 8px;
+    margin: 0.95em 0;
+    overflow: hidden;
 
     pre {
         padding-left: 0;
         padding-right: 0;
+        margin: 0;
 
         .line {
             padding-left: 20px;
-            padding-right: 10px;
+            padding-right: 40px;
         }
     }
 
